# impute-knn-tn

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
dev/: benchmark.py  generate_r_reference_perc1.R  parity_analysis.ipynb
docs/: r_vs_python_design.md  validation.md
src/impute_knn_tn/: __init__.py  _correlation.pyx  impute.py  knn_engine.py  truncnorm_mle.py
tests/: conftest.py  test_knn_engine.py  test_parity.py  test_truncnorm_mle.py
tests/reference/bojkova2020_correlation/: imputed_rows.csv  input_metadata.csv  runtime_metadata.csv
tests/reference/bojkova2020_correlation_perc1/: runtime_metadata.csv
tests/reference/bojkova2020_truncation/: runtime_metadata.csv
tests/reference/bojkova2020_truncation_perc1/: runtime_metadata.csv
tests/reference/real_data_correlation/: param_estimates.csv
tests/reference/real_data_correlation_perc1/: output_matrix.csv
tests/reference/real_data_truncation_perc1/: input_matrix.csv  output_matrix.csv  param_estimates.csv
tests/reference/sim_correlation/: output_matrix.csv
tests/reference/sim_correlation_perc1/: param_estimates.csv
tests/reference/sim_truncation_perc1/: input_matrix.csv
tests/reference/synthetic_1000_correlation/: output_matrix.csv
tests/reference/synthetic_1000_correlation_perc1/: param_estimates.csv
tests/reference/synthetic_1000_truncation/: output_matrix.csv  param_estimates.csv
tests/reference/synthetic_1000_truncation_perc1/: input_matrix.csv  output_matrix.csv
tests/reference/synthetic_20000_correlation/: param_estimates.csv  timing.txt
(+13 files in other folders)
